# AndroidAPK

./: README.md  local.properties
FPVScannerFinal/: build.gradle  settings.gradle
FPVScannerFinal/app/: build.gradle
FPVScannerFinal/app/src/main/: AndroidManifest.xml
FPVScannerFinal/app/src/main/cpp/: CMakeLists.txt  hackrf_backend.cpp
FPVScannerFinal/app/src/main/java/com/example/fpvscanner/: HackrfBackend.kt  MainActivity.kt  SpectrumView.kt
FPVScannerFinal/app/src/main/res/layout/: activity_main.xml
FPVScannerFinal/app/src/main/res/values/: strings.xml  themes.xml
FPVScannerFinal/gradle/wrapper/buildOutputCleanup/: cache.properties
